# chess

./: .dockerignore  .env  Cargo.toml  README.md
.github/workflows/: server_cd.yml
ai/: Cargo.toml
ai/src/: lib.rs  test.rs
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/bit_board/: mod.rs
engine/src/bit_magic/: mod.rs
engine/src/board/: mod.rs  state.rs
engine/src/board/bit_board/: mod.rs
engine/src/board/test/: mod.rs
engine/src/piece/: mod.rs  position.rs
engine/src/piece/test/: mod.rs
engine/src/result/: mod.rs
server/: Cargo.toml  Dockerfile
server/src/: client.rs  con.rs  lobby.rs  main.rs  messages.rs
server/src/commands/: mod.rs
server/src/lobby/: client.rs  errors.rs  mod.rs  room.rs
server/src/lobby/room/: actor.rs  message.rs  mod.rs
server/src/messages/: inner.rs  mod.rs  result.rs  success.rs
src/: board.rs  main.rs
src/piece/: mod.rs  position.rs
