[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
actix = "0.13.1"
actix-web = "4"
actix-cors = "0.6.4"
actix-web-actors="4"
tokio = { version = "1.16.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4","serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.188", features= ["derive"] }
serde_json = "1.0.107"
